# LM-From-Zero

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
checkpoints/: tokenizer_merges.pkl  tokenizer_vocab.pkl
cs336_repo/tests/: adapters.py  conftest.py  test_tokenizer.py
cs336_repo/tests/_snapshots/: test_train_bpe_special_tokens.pkl
lmfromzero/: activations.py  attention.py  block.py  checkpoint.py  config.py  data.py  generate.py  model.py  norm.py  ops.py  optimizer.py  scheduler.py  tokenizer.py
notebooks/: colab_train.py
scripts/: generate.py  train.py  train_tokenizer.py
tests/: test_attention.py  test_model.py  test_ops.py  test_optimizer.py  test_tokenizer.py
